Sugati/src/objects/Payment_Log__c.object
<CustomObject>
    <fields>
        <fullName>PL_Card_Token__c</fullName>
        <label>Card_Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Card_Type__c</fullName>
        <label>Card_Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PL_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payment Logs</relationshipLabel>
        <relationshipName>Payment_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PL_Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PL_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Payment Log</label>
    <nameField>
        <displayFormat>PL-{0000000}</displayFormat>
        <label>Payment Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>